# TrendAgent

./: .gitignore  start-dev.sh
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_rebuild_weight_system.py  0003_narrative_layer.py  0004_drop_narrative_tokens.py  0005_narrative_report_cascade.py  0006_add_formula_to_factor_categories.py  0007_drop_formula_from_factor_categories.py  0008_add_tam_expansion_factor.py  0009_remove_fundamental_roic.py  0010_soft_factor_code_len.py  0011_add_analysis_insights.py
backend/app/: config.py  db.py  main.py  models.py
backend/app/api/: __init__.py  dashboard.py  engine.py  health.py  market.py  meta.py  narrative.py  report.py  serializers.py
backend/app/core/: app.py
backend/app/schemas/: __init__.py  engine.py
backend/app/scripts/: test_fear_greed_index.py  test_macro_logic.py  test_providers.py  test_yfinance_connection.py  validate_aion_sources.py
backend/app/services/: __init__.py  aion_engine.py  context_builder.py  event_intensity.py  factors.py  insights_builder.py  llm.py  narrative_orchestrator.py  policy_tailwind.py  risk_reward.py  soft_factors.py  tam_expansion.py
backend/app/services/factors/: __init__.py  catalyst.py  core.py  flow.py  fundamental.py  industry.py  macro.py  orchestrator.py  sentiment.py  technical.py  volatility.py
backend/app/services/pipeline/: ingest_worker.py
backend/app/services/providers/: __init__.py  base.py  fear_greed.py  fmp.py  fred.py  massive.py  yfinance.py
frontend/: README.md  (+6 more)
(+36 files in other folders)
